tests/ui/parser/diff-markers/enum-2.stderr
error: encountered diff marker
  --> $DIR/enum-2.rs:3:1
   |
LL | <<<<<<< HEAD
   | ^^^^^^^ between this marker and `|||||||` is the code that you are merging into
LL |         x: u8,
LL | |||||||
   | ------- between this marker and `=======` is the base code (what the two refs diverged from)
LL |         z: (),
LL | =======
   | ------- between this marker and `>>>>>>>` is the incoming code
LL |         y: i8,
LL | >>>>>>> branch
   | ^^^^^^^ this marker concludes the conflict region
   |
   = note: conflict markers indicate that a merge was started but could not be completed due to merge conflicts
           to resolve a conflict, keep only the code you want and then delete the lines containing conflict markers
   = help: if you are in a merge, the top section is the code you already had checked out and the bottom section is the new code
           if you are in a rebase, the top section is the code being rebased onto and the bottom section is the code you had checked out which is being rebased
   = note: for an explanation on these markers from the `git` documentation, visit <https://git-scm.com/book/en/v2/Git-Tools-Advanced-Merging#_checking_out_conflicts>

error: aborting due to 1 previous error

