tests/ui/parser/diff-markers/enum-2.rs
enum E {
    Foo {
<<<<<<< HEAD //~ ERROR encountered diff marker
        x: u8,
|||||||
        z: (),
=======
        y: i8,
>>>>>>> branch
    }
}
